--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
+/* The Body */
 body {
     background-color:azure;
     margin: 0;
 }
 
+/* Navigation Bar */
 .navbar{
     background-color: rgb(255, 255, 255);
     border-top:1px solid rgb(197, 196, 196);
     border-bottom:1px solid rgb(197, 196, 196);
 }
 
-/* Home Image Navigation */
+/* Home Image Navigation Bar */
 .navbar-item img{
     max-height: 5rem;
     box-sizing: inherit;
@@ -18,6 +20,7 @@ body {
     margin:0 auto;
 }
 
+/* Navigation Home Bar */
 .home {
     display: inline-block;
     font-size: 16px;
@@ -36,16 +39,16 @@ body {
     font-size: 16px;
     border: none;
     font-family:Georgia, 'Times New Roman', Times, serif;
-  }
+}
   
-  /* The container <div> - needed to position the dropdown content */
-  .navbar-dropdown-hover {
+/* The container <div> - needed to position the dropdown content */
+.navbar-dropdown-hover {
     position: relative;
     display: inline-block;
-  }
+}
   
-  /* Dropdown Content (Hidden by Default) */
-  .navbar-dropdown {
+/* Dropdown Content (Hidden by Default) */
+.navbar-dropdown {
     display: none;
     position:absolute;
     background-color: #ffffff;
@@ -54,22 +57,36 @@ body {
     z-index: 1;
   }
   
-  /* Links inside the dropdown */
-  .navbar-dropdown a {
+/* Links inside the dropdown */
+.navbar-dropdown a {
     color: rgb(134, 132, 132);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
+}
 
-  /* Change color of hover background */
-  .dropbtn:hover {box-shadow:1px 1px 5px 1px rgb(141, 141, 141)}
+/* Change color of hover background */
+.dropbtn:hover {
+    box-shadow:1px 1px 5px 1px rgb(141, 141, 141)
+}
 
-  /* Change color of dropdown links on hover */
-  .navbar-dropdown a:hover {background-color: #ddd;}
+/* Change color of hover background on Home icon */
+.home:hover{
+    box-shadow:1px 1px 5px 1px rgb(141, 141, 141)
+}
+
+
+/* Change color of dropdown links on hover */
+.navbar-dropdown a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.navbar-dropdown-hover:hover .navbar-dropdown {
+    display: block;
+}
   
-  /* Show the dropdown menu on hover */
-  .navbar-dropdown-hover:hover .navbar-dropdown {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .navbar-dropdown-hover:hover .dropbtn {background-color: #ffffff;}
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.navbar-dropdown-hover:hover .dropbtn {
+    background-color: #ffffff;
+}
