giving the pba header some styleeee

--- a/style.css
+++ b/style.css
@@ -38,6 +38,11 @@ body::-webkit-scrollbar-thumb{
     color:#39393a;
 }
 
+.pbaH1{
+    text-align: center;
+    color:#39393a;    
+}
+
 /* Navigation Bar */
 .navbar{
     background-color: rgb(255, 255, 255);
