Adding PBA H1 Alignment

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body::-webkit-scrollbar-thumb{
     color:#39393a;
 }
 
+/* PBA Page H1 Alignment*/
 .pbaH1{
     text-align: center;
     color:#39393a;    
