--- a/style.css
+++ b/style.css
@@ -45,6 +45,12 @@ body::-webkit-scrollbar-thumb{
     color:#39393a;    
 }
 
+/* SF Page H1 Alignments */
+.sfH1{
+    text-align: center;
+    color:#39393a;  
+}
+
 /* Navigation Bar */
 .navbar{
     background-color: rgb(255, 255, 255);
@@ -109,14 +115,14 @@ body::-webkit-scrollbar-thumb{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
-  
+
 /* Links inside the dropdown */
 .navbar-dropdown a {
     color: rgb(134, 132, 132);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-    transition: 0.4s all;
+    transition: 0.5s;
 }
 
 /* Change color of hover background */
