--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@
 body {
     background-color:azure;
     margin: 0;
+    cursor: url(https://cur.cursors-4u.net/games/gam-4/gam308.cur), auto;
+}
+
+/* Making a links have a different hover icon*/
+a:link{
+    cursor: url(https://images.wikia.nocookie.net/__cb20141003083552/maplestory/images/e/ea/MSCursorHover.gif),pointer;
 }
 
 /* Making the headers in Body center */
@@ -62,6 +68,7 @@ body::-webkit-scrollbar-thumb{
     background-color: rgb(255, 255, 255);
     border-top:1px solid rgb(197, 196, 196);
     border-bottom:1px solid rgb(197, 196, 196);
+    cursor: url(https://cur.cursors-4u.net/games/gam-4/gam308.cur), auto;
 }
 
 
@@ -104,6 +111,8 @@ body::-webkit-scrollbar-thumb{
     font-size: 16px;
     border: none;
     font-family:Georgia, 'Times New Roman', Times, serif;
+    cursor: url(https://cur.cursors-4u.net/games/gam-4/gam308.cur), auto;
+
 }
   
 /* The container <div> - needed to position the dropdown content */
@@ -187,8 +196,9 @@ form{
 
 
 
-
-
+/* Start https://www.cursors-4u.com */ 
+/* {cursor: url(https://cur.cursors-4u.net/games/gam-4/gam308.cur), auto !important;} 
+/* End https://www.cursors-4u.com */
 
 
 
