Editing scrollbar background color

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body::-webkit-scrollbar{
 
 /* Setting scrollbar track color */
 body::-webkit-scrollbar-track{
-    background: #1e1e24;
+    background: #474749;
     border-radius: 0.15rem;
 }
 
