Editing style.css

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ input:hover{
     color:#39393a;
 }
 
+/* Making aligning the H1 and H2 of Star Force Page */
 .sfH1, .sfH2{
     text-align: center;
     color:#39393a;
