Editing Style for SFC Table

--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ form{
     margin-top: 10px;
 }
 
-/* Customizing Table */
+/* Customizing Table for Star Force Costs*/
 
 .sfcTable{
     font-family: arial, sans-serif;
