Editing style for PBA H2 Title

--- a/style.css
+++ b/style.css
@@ -64,6 +64,11 @@ input:hover{
     color:#39393a;    
 }
 
+/* PBA H2 */
+.pbaTT{
+    color:#39393a;   
+}
+
 /* SF Page H1 Alignments */
 .sfH1{
     text-align: center;
