--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ form{
 
 .normalpbaTable{
     margin-left: auto;
-    margin-right: auto;`
+    margin-right: auto;
 }
 
 .innopbaTable{
@@ -317,7 +317,7 @@ form{
     .column {
       width: 100%;
     }
-
+}
 
 /* Start https://www.cursors-4u.com */ 
 /* {cursor: url(https://cur.cursors-4u.net/games/gam-4/gam308.cur), auto !important;} 
