--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ input:hover{
 /* Setting scrollbar size */
 body::-webkit-scrollbar{
     width:0.45rem;
+    height:0.45rem;
 }
 
 /* Setting scrollbar track color */
